# project-weather-today

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  requirements.txt  structure.txt
config/: .env  airflow.cfg
dags/: dbt_dag.py  etl_pipeline.py
dbt_model/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
dbt_model/models/: src_weather.yml
dbt_model/models/mart/: dim__province.sql  fct__weather.sql
docker/: requirements.txt
scripts/: extract.py  load.py  load_to_bq.py  load_to_gcs.py  transform.py
