[project]
name = "etl-project1"
version = "0.1.0"
description = ""
authors = [
    {name = "Woramateclear",email = "woramate.pong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "google-cloud-bigquery (>=3.34.0,<4.0.0)",
    "apache-airflow (>=3.0.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "google-cloud (>=0.34.0,<0.35.0)",
    "google-cloud-storage (<3.2)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "dbt-core (>=1.10.9,<2.0.0)",
    "dbt-bigquery (>=1.10.1,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"