[project]
name = "dbt-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Woramateclear",email = "woramate.pong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery (>=1.10.1,<2.0.0)",
    "dbt-core (>=1.10.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
